was made refactoring. correct structure image controller and db
