# app/controllers/image.ts
@@ -1,47 +1,35 @@
 import express, { NextFunction } from 'express'
 import fs from 'fs'
 import createError from 'http-errors'
-import { deleteImages, getImages } from '../models/image'
+import * as model from '../models/image'
 import path from 'path'
 import { pathForImages } from '../../bin/common/paths'
 
-export async function getImage (req: express.Request, res: express.Response, next: NextFunction) {
+export async function getById (req: express.Request, res: express.Response, next: NextFunction) {
   try {
     const fileId = req.params.fileId
 
-    const _images = await getImages(fileId)
+    const _image = await model.getImageById(fileId)
 
-    if (!_images.length) {
-      return next(createError(400, 'File with such id does not exist', {
-        source: 'No exist'
-      }))
-    }
-
-    res.status(200).json({
-      id: fileId,
-      items: _images.map(item => {
-        const { id, ...rest } = item
-        return { ...rest }
-      })
-    })
+    res.status(200).json(_image as model.ImageView)
   } catch (e: any) {
     next(createError(500, 'Error processing data during getting images.'))
   }
 }
 
-export async function deleteImage (req: express.Request, res: express.Response, next: NextFunction) {
+export async function deleteById (req: express.Request, res: express.Response, next: NextFunction) {
   try {
     const fileId = req.params.fileId
 
-    const _images = await getImages(fileId)
+    const image = await model.getImageById(fileId)
 
-    if (!_images.length) {
+    if (!image) {
       return next(createError(400, 'Wrong id', {
         source: 'id'
       }))
     }
 
-    await deleteImages(fileId)
+    await model.deleteImages(fileId)
 
     function deleteFile (path: string): Promise<void> {
       return new Promise((resolve, reject) => {
@@ -55,9 +43,9 @@ export async function deleteImage (req: express.Request, res: express.Response, 
       })
     }
 
-    for (const _image of _images) {
-      // TODO chek this !
-      if (_image.name) await deleteFile(path.resolve(pathForImages, _image.name))
+    for (const imageByTemplate of image.divisionByTemplates) {
+      const name = imageByTemplate.name
+      if (name) await deleteFile(path.resolve(pathForImages, name))
     }
 
     res.status(200).json({
