# app/models/project.ts
@@ -1,6 +1,7 @@
 import { Client } from 'pg'
-import { urlForStaticImages } from '../../bin/common/paths'
-import { Image } from './image'
+import format from 'pg-format'
+import { getUrlImage } from '../../bin/common/paths'
+import { ImageView } from './image'
 import { Language, ObjectWithLanguage, OptionsRequest } from './types'
 
 export type Link = {
@@ -24,7 +25,7 @@ export type Project = {
   readonly currentLanguage?: Language
   readonly languages?: Language[]
   readonly id?: string
-  readonly images?: Omit<Image, 'id' | 'name'>[]
+  readonly images?: ImageView[]
 }
 
 export type ProjectRequest = Omit<Project, 'languages' | 'id' | 'images' | 'currentLanguages' >
@@ -58,76 +59,18 @@ export async function getNameProjects (): Promise<{ name: string, id: string }[]
   }
 }
 
-export async function createProject (project: ProjectRequest): Promise<string> {
+export async function getCountProjects (): Promise<number> {
   const db = new Client()
   try {
-    const {
-      name,
-      description,
-      type = '',
-      spendTime = '',
-      events = [],
-      stack,
-      links,
-      imagesId
-    } = project
-    const releaseDate = events.find(i => i.status === ProjectStatuses.RELEASE)?.date || null
-
     await db.connect()
 
-    await db.query('BEGIN;')
-
-    const { rows } = await db.query(`
-      INSERT INTO projects (name, type, stack, spend_time, release_date)
-        VALUES 
-          ('${name}', '${type}', '{${stack?.join(', ') || ''}}', '${spendTime}', ${releaseDate ? "'" + releaseDate + "'" : null})
-          RETURNING *;
-    `)
-    const _projectId: string = rows.shift().project_id
-
-    if (!_projectId) {
-      await db.query('ROLLBACK;')
-      throw new Error('There is Error during processing create project in database')
-    }
-
-    if (description) {
-      const _languages = Object.keys(description)
-
-      const _values = _languages.map((_language) => `('${_projectId}', '${_language}', '${description[_language as Language] || null}')`)
-
-      await db.query(`
-        INSERT INTO projects_multilanguge_content (project_id, language, description)
-          VALUES 
-            ${_values.join(', ')};
-      `)
-    }
-
-    if (links && Array.isArray(links) && links.length) {
-      const _values = links.map(item => `('${item.name}', '${item.link}', '${_projectId}')`)
-      await db.query(`
-        INSERT INTO links (name, link, project_id)
-          VALUES 
-            ${_values.join(', ')};
-      `)
-    }
-
-    if (imagesId && Array.isArray(imagesId) && imagesId.length) {
-      await db.query(`
-        UPDATE images 
-          SET project_id = ${_projectId}
-          WHERE image_id IN ( ${imagesId.map(item => `'${item}'`).join(', ')} )
-      `)
-    }
-
-    await db.query('COMMIT;')
-
-    return _projectId
+    const { rows } = await db.query('SELECT COUNT( * ) FROM projects;')
+    return parseInt(rows.shift().count)
   } catch (e: any) {
-    await db.query('ROLLBACK;')
     console.error(e)
     throw e
   } finally {
-    await db.end()
+    db.end()
   }
 }
 
@@ -159,6 +102,8 @@ export async function getProjectById (projectId: string, language: Language): Pr
     `)
     const links = _linksRows.rows || []
 
+    const images = await getImageByProjectId(db, projectId)
+
     const { name, type, stack, spend_time: spendTime, release } = _project
     return {
       name,
@@ -167,28 +112,14 @@ export async function getProjectById (projectId: string, language: Language): Pr
       spendTime,
       events: release ? [{ date: release, status: ProjectStatuses.RELEASE }] : [],
       stack,
-      links
+      links,
+      images
     }
   } catch (e: any) {
     console.error(e)
     throw e
   } finally {
     await db.end()
-  }
-}
-
-export async function getCountProjects (): Promise<number> {
-  const db = new Client()
-  try {
-    await db.connect()
-
-    const { rows } = await db.query('SELECT COUNT( * ) FROM projects;')
-    return parseInt(rows.shift().count)
-  } catch (e: any) {
-    console.error(e)
-    throw e
-  } finally {
-    db.end()
   }
 }
 
@@ -205,10 +136,11 @@ export async function getProjects (option: OptionsRequest): Promise<ProjectRespo
     await db.connect()
 
     const { rows: _projects } = await db.query(`
-      SELECT project_id as id, name, type, stack, spend_time, release_date as release FROM projects 
-      ${order ? 'ORDER BY ' + order : 'ORDER BY project_id'}
-      ${pageSize && page ? 'LIMIT ' + pageSize : ''}
-      ${pageSize && page ? 'OFFSET ' + ((page - 1) * pageSize) : ''}
+      SELECT project_id as id, name, type, stack, spend_time, release_date as release 
+        FROM projects 
+        ${order ? 'ORDER BY ' + order : 'ORDER BY project_id'}
+        ${pageSize && page ? 'LIMIT ' + pageSize : ''}
+        ${pageSize && page ? 'OFFSET ' + ((page - 1) * pageSize) : ''}
     `)
 
     const _result = []
@@ -229,25 +161,91 @@ export async function getProjects (option: OptionsRequest): Promise<ProjectRespo
       `)
       const links = _linksRows.rows || []
 
-      /* form images */
-      const { rows: _imagesList } = await db.query(`
-      SELECT name, description, width, height, template_name FROM images
-        WHERE project_id = '${id}';
-      `)
-      const images = _imagesList.map<Omit<Image, 'name' | 'id'>>((item) => ({
-        description: item.description || '',
-        width: item.width,
-        height: item.height,
-        templateName: item.template_name,
-        url: `${urlForStaticImages}/${item.name}`
-      })) || []
-
       const events = release ? [{ date: release, status: ProjectStatuses.RELEASE }] : []
+
+      const images = await getImageByProjectId(db, id)
+
       _result.push({ id, name, description, type, spendTime, events, stack, links, images })
     }
 
     return _result
   } catch (e: any) {
+    console.error(e)
+    throw e
+  } finally {
+    await db.end()
+  }
+}
+
+export async function createProject (project: ProjectRequest): Promise<string> {
+  const db = new Client()
+  try {
+    const {
+      name,
+      description,
+      type = '',
+      spendTime = '',
+      events = [],
+      stack,
+      links,
+      imagesId
+    } = project
+    const releaseDate = events.find(i => i.status === ProjectStatuses.RELEASE)?.date || null
+
+    await db.connect()
+
+    await db.query('BEGIN;')
+
+    const { rows } = await db.query(`
+      INSERT INTO projects (name, type, stack, spend_time, release_date)
+        VALUES 
+          ('${name}', '${type}', '{${stack?.join(', ') || ''}}', '${spendTime}', ${releaseDate ? "'" + releaseDate + "'" : null})
+          RETURNING project_id as id;
+    `)
+    const _projectId: string = rows.shift().id
+
+    if (!_projectId) {
+      await db.query('ROLLBACK;')
+      throw new Error('There is Error during processing create project in database')
+    }
+
+    if (description) {
+      const _languages = Object.keys(description)
+
+      const _values = _languages.map((_language) => `('${_projectId}', '${_language}', '${description[_language as Language] || null}')`)
+
+      await db.query(`
+        INSERT INTO projects_multilanguge_content (project_id, language, description)
+          VALUES 
+            ${_values.join(', ')};
+      `)
+    }
+
+    if (links && Array.isArray(links) && links.length) {
+      const _values = links.map(item => `('${item.name}', '${item.link}', '${_projectId}')`)
+      await db.query(`
+        INSERT INTO links (name, link, project_id)
+          VALUES 
+            ${_values.join(', ')};
+      `)
+    }
+
+    if (imagesId && Array.isArray(imagesId) && imagesId.length) {
+      const _values = imagesId.map(i => [_projectId, i])
+      const _query = format(`
+        INSERT INTO project_images 
+          (project_id, image_id) 
+          VALUES
+          %L;
+        `, _values)
+      await db.query(_query)
+    }
+
+    await db.query('COMMIT;')
+
+    return _projectId
+  } catch (e: any) {
+    await db.query('ROLLBACK;')
     console.error(e)
     throw e
   } finally {
@@ -318,16 +316,19 @@ export async function updateProject (project: ProjectRequest, projectId: string)
 
     // TODO попробовать написать одним запросом
     await db.query(`
-      UPDATE images
-        SET project_id = NULL
-        WHERE project_id = '${projectId}';
-    `)
+      DELETE FROM project_images
+        WHERE project_id = $1;
+    `, [projectId])
+
     if (imagesId && Array.isArray(imagesId) && imagesId.length) {
-      await db.query(`
-        UPDATE images 
-          SET project_id = ${projectId}
-          WHERE image_id IN ( ${imagesId.map(item => `'${item}'`).join(', ')} )
-      `)
+      const _values = imagesId.map(i => [projectId, i])
+      const _query = format(`
+        INSERT INTO project_images 
+          (project_id, image_id) 
+          VALUES
+          %L;
+        `, _values)
+      await db.query(_query)
     }
 
     await db.query('COMMIT;')
@@ -354,4 +355,41 @@ export async function deleteProject (projectId: string): Promise<void> {
   } finally {
     await db.end()
   }
+}
+
+async function getImageByProjectId (db: Client, projectId: string): Promise<ImageView[]> {
+  const images: ImageView[] = []
+
+  const { rows } = await db.query<{ id: string }>(`
+        SELECT image_id as id FROM project_images
+          WHERE project_id = $1;
+        `, [projectId])
+
+  for (const { id: imageId } of rows) {
+    const { rows: imagesList } = await db.query<{ id: string, description: string }>(`
+        SELECT image_id as id, description FROM images
+          WHERE image_id = $1;
+        `, [imageId])
+    const image = imagesList.shift()
+
+    if (!image) {
+      throw new Error('Error during getting image entity')
+    }
+
+    const { rows: divisionByTemplates } =
+        await db.query<{ name: string, template: string, width: string | null, height: string | null}>(`
+          SELECT name, template_name as template, width, height 
+            FROM images_division_by_template
+            WHERE image_id = $1
+            ORDER BY name;
+          `, [image.id])
+
+    images.push({
+      id: imageId,
+      description: image.description,
+      divisionByTemplates: divisionByTemplates.map(i => ({ ...i, url: getUrlImage(i.name) }))
+    })
+  }
+
+  return images
 }
